deployments/workloads/speedtest/speed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-deployment
  labels:
    app: speedtest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
        - name: speedtest
          image: ghcr.io/librespeed/speedtest:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
