deployments/workloads/speedtest/speed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-service
spec:
  selector:
    app: speedtest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
