deployments/workloads/speedtest/speed-cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "mkdocs"
spec:
  endpointSelector:
    matchLabels:
      app: speedtest
  egress:
    - toPorts:
        - ports:
  ingress:
    - toPorts:
        - ports:
            - port: "3000"
              protocol: ANY
